--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mathsotnayan-front-teacher",
+  "name": "mathosanayan-front",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^7.2.96",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.2.0",
+    "pinia": "^2.1.7",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuetify": "^3.4.4"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.1",
+    "@types/node": "^20.10.4",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -34,6 +41,6 @@
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.5.5"
+    "typescript": "^4.7.4"
   }
 }
