--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "core-js": "^3.8.3",
-    "crypto-js": "^4.2.0",
-    "pinia": "^2.1.7",
+    "pinia": "^2.1.6",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
-    "vuetify": "^3.4.4"
+    "vuetify": "^3.4.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.1",
