--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
-    "vuetify": "^3.4.4",
-    "xlsx": "^0.18.5"
+    "vuetify": "^3.4.4"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.1",
