--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@mdi/font": "^7.2.96",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
-    "chart.js": "^4.4.1",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "pinia": "^2.1.6",
     "vue": "^3.2.13",
-    "vue-chartjs": "^5.3.0",
+    "vue-chart-3": "^3.1.8",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
     "vuetify": "^3.4.4"
